--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,21 @@
 
 	<version>1.0</version>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<restlet.version>2.2.0</restlet.version>
+		<guice.version>3.0</guice.version>
+		<log4j.version>2.10.0</log4j.version>
+		<slf4j.version>1.7.25</slf4j.version>
+	</properties>
+
 	<build>
 		<finalName>${project.artifactId}</finalName>
 		<resources>
 			<resource>
 				<directory>${project.basedir}/src/main/java</directory>
 				<includes>
-					<include>log4j.xml</include>
+					<include>log4j2.xml</include>
 				</includes>
 			</resource>
 		</resources>
@@ -85,24 +93,34 @@
 		
 		<!-- For logging -->
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-1.2-api</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.2</version>
+			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jul-to-slf4j</artifactId>
-			<version>1.7.2</version>
+			<version>${slf4j.version}</version>
 		</dependency>
 		
 		<!-- Morphia ORM for MongoDB -->
@@ -170,12 +188,6 @@
 			<version>2.2.2</version>
 		</dependency>
 	</dependencies>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<restlet.version>2.2.0</restlet.version>
-		<guice.version>3.0</guice.version>
-	</properties>
 </project>
 
  
